# django

./: build.sh  pyproject.toml  render.yaml
mysite/: settings.py  settings.py~
render/: views.py
render/templates/render/: index.html  index.html~
