[tool.poetry]
name = "mysite"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.1.3"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.8.6"
whitenoise = {extras = ["brotli"], version = "^5.2.0"}
gunicorn = "^20.0.4"
django-mathfilters = "^1.0.0"
django-ckeditor = "^6.0.0"
Pillow = "^8.0.1"
django-storages = "^1.10.1"
boto3 = "^1.16.25"
scout-apm = "^2.17.0"
django-debug-toolbar = "^2.2"
django-compression-middleware = "^0.4.1"
django-redis = "^4.12.1"
django-htmlmin = "^0.11.0"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
